--- a/nbs/extract-wordpiece.ipynb
+++ b/nbs/extract-wordpiece.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "80a52d8a-9c00-4f84-af75-283e074d94eb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "1c4a178d-b19e-44bc-806b-9eb899e2b2b1",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "'/Users/vinay/Projects/Crossmdl/Data/emb.joblib'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,12 +37,14 @@
     "annotns_file = '/Users/vinay/Projects/Crossmdl/Data/youcookii_annotations_trainval.json'\n",
     "\n",
     "store_loc = os.path.join(data_dir,'emb.joblib')\n",
+    "\n",
+    "store_loc2 = os.path.join(data_dir,'emb_alltokens.joblib')\n",
     "store_loc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "83fc76bc-fb12-4ad7-94cf-755cefb67bd0",
    "metadata": {},
    "outputs": [],
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "6a58c048",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1c7394ea",
    "metadata": {},
    "outputs": [],
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "569279fc",
    "metadata": {},
    "outputs": [
@@ -91,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_transform.bias', 'vocab_layer_norm.weight', 'vocab_transform.weight', 'vocab_projector.bias', 'vocab_projector.weight', 'vocab_layer_norm.bias']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_transform.bias', 'vocab_layer_norm.bias', 'vocab_layer_norm.weight', 'vocab_transform.weight', 'vocab_projector.bias', 'vocab_projector.weight']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -121,12 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "97bd08f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_extraction(storage,model,tokenizer):\n",
+    "def feature_extraction(storage,model,tokenizer,get_alltokens=False):\n",
     "    out = {}\n",
     "    for vid in tqdm(storage):\n",
     "        lis_feat = []\n",
@@ -134,7 +136,10 @@
     "            with torch.no_grad():\n",
     "                inputs = tokenizer(sent, return_tensors=\"pt\")\n",
     "                outputs = model(**inputs)\n",
-    "            lis_feat.append(outputs.last_hidden_state[0,0,:].cpu().detach().numpy())\n",
+    "            if get_alltokens:\n",
+    "                lis_feat.append(outputs.last_hidden_state[0,1:,:].cpu().detach().numpy())\n",
+    "            else: \n",
+    "                lis_feat.append(outputs.last_hidden_state[0,0,:].cpu().detach().numpy())\n",
     "        out[vid] = lis_feat\n",
     "    return out\n",
     "            "
@@ -142,20 +147,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "516ee3ee",
+   "execution_count": 16,
+   "id": "75d2f871",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1790/1790 [03:15<00:00,  9.14it/s]\n"
+      "100%|███████████████████████████████████████| 1790/1790 [03:06<00:00,  9.58it/s]\n"
      ]
     }
    ],
    "source": [
-    "out = feature_extraction(storage,model,tokenizer)"
+    "out2 = feature_extraction(storage,model,tokenizer,get_alltokens=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e521d1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "516ee3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#out = feature_extraction(storage,model,tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "46bc2f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/vinay/Projects/Crossmdl/Data/emb_alltokens.joblib']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(out2,store_loc2)"
    ]
   },
   {
@@ -331,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
