--- a/nbs/Recipe_evaluation.ipynb
+++ b/nbs/Recipe_evaluation.ipynb
@@ -509,6 +509,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO: \n",
+    "\n",
+    "1.Plot traninig plots for all the hyperparam experiments - train-loss, cos-sim,sin-sim.\n",
+    "\n",
+    "2.Show comparision stats on test set for [total,title,ingredients,instruction models].\n",
+    "\n",
+    "3.Show retrieved images\n",
+    "\n",
+    "4. Plot how smooth interpolation between images retrieve interpolated text too.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
