--- a/nbs/extract-wordpiece.ipynb
+++ b/nbs/extract-wordpiece.ipynb
@@ -15,26 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "1c4a178d-b19e-44bc-806b-9eb899e2b2b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/vinay/Projects/Crossmdl/Data/emb.joblib'"
+       "'/common/home/vk405/Projects/Crossmdl/Data/YouCookII/emb.joblib'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dir = '/Users/vinay/Projects/Crossmdl/Data/'\n",
+    "data_dir = '/common/home/vk405/Projects/Crossmdl/Data/YouCookII/'\n",
     "\n",
     "\n",
-    "annotns_file = '/Users/vinay/Projects/Crossmdl/Data/youcookii_annotations_trainval.json'\n",
+    "annotns_file = data_dir+'annotations/'+'youcookii_annotations_trainval.json'\n",
     "\n",
     "store_loc = os.path.join(data_dir,'emb.joblib')\n",
     "\n",
@@ -44,7 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
+   "id": "9c48b124-83de-478f-84b1-8fba2a73db1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "581fe2ef-7bfb-499c-8d32-375c4d7b2822",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "83fc76bc-fb12-4ad7-94cf-755cefb67bd0",
    "metadata": {},
    "outputs": [],
@@ -64,7 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "f0cc629e-45dd-411d-89cf-036b536e39cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "6a58c048",
    "metadata": {},
    "outputs": [],
@@ -75,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "1c7394ea",
    "metadata": {},
    "outputs": [],
@@ -85,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "569279fc",
    "metadata": {},
    "outputs": [
@@ -93,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_transform.bias', 'vocab_layer_norm.bias', 'vocab_layer_norm.weight', 'vocab_transform.weight', 'vocab_projector.bias', 'vocab_projector.weight']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_transform.weight', 'vocab_projector.weight', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_layer_norm.weight']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -102,6 +128,265 @@
    "source": [
     "model = DistilBertModel.from_pretrained(\"distilbert-base-uncased\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7ed06d49-0759-47a7-8229-765179f356e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DistilBertModel(\n",
+       "  (embeddings): Embeddings(\n",
+       "    (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+       "    (position_embeddings): Embedding(512, 768)\n",
+       "    (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "    (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  )\n",
+       "  (transformer): Transformer(\n",
+       "    (layer): ModuleList(\n",
+       "      (0): TransformerBlock(\n",
+       "        (attention): MultiHeadSelfAttention(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        )\n",
+       "        (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (ffn): FFN(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (activation): GELUActivation()\n",
+       "        )\n",
+       "        (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "      (1): TransformerBlock(\n",
+       "        (attention): MultiHeadSelfAttention(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        )\n",
+       "        (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (ffn): FFN(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (activation): GELUActivation()\n",
+       "        )\n",
+       "        (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "      (2): TransformerBlock(\n",
+       "        (attention): MultiHeadSelfAttention(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        )\n",
+       "        (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (ffn): FFN(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (activation): GELUActivation()\n",
+       "        )\n",
+       "        (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "      (3): TransformerBlock(\n",
+       "        (attention): MultiHeadSelfAttention(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        )\n",
+       "        (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (ffn): FFN(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (activation): GELUActivation()\n",
+       "        )\n",
+       "        (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "      (4): TransformerBlock(\n",
+       "        (attention): MultiHeadSelfAttention(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        )\n",
+       "        (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (ffn): FFN(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (activation): GELUActivation()\n",
+       "        )\n",
+       "        (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "      (5): TransformerBlock(\n",
+       "        (attention): MultiHeadSelfAttention(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        )\n",
+       "        (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (ffn): FFN(\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (activation): GELUActivation()\n",
+       "        )\n",
+       "        (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "de17c6d8-d92f-48c5-bea5-e9c13cb36f68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embeddings.word_embeddings.weight is untrainable\n",
+      "embeddings.position_embeddings.weight is untrainable\n",
+      "embeddings.LayerNorm.weight is untrainable\n",
+      "embeddings.LayerNorm.bias is untrainable\n",
+      "transformer.layer.0.attention.q_lin.weight is untrainable\n",
+      "transformer.layer.0.attention.q_lin.bias is untrainable\n",
+      "transformer.layer.0.attention.k_lin.weight is untrainable\n",
+      "transformer.layer.0.attention.k_lin.bias is untrainable\n",
+      "transformer.layer.0.attention.v_lin.weight is untrainable\n",
+      "transformer.layer.0.attention.v_lin.bias is untrainable\n",
+      "transformer.layer.0.attention.out_lin.weight is untrainable\n",
+      "transformer.layer.0.attention.out_lin.bias is untrainable\n",
+      "transformer.layer.0.sa_layer_norm.weight is untrainable\n",
+      "transformer.layer.0.sa_layer_norm.bias is untrainable\n",
+      "transformer.layer.0.ffn.lin1.weight is untrainable\n",
+      "transformer.layer.0.ffn.lin1.bias is untrainable\n",
+      "transformer.layer.0.ffn.lin2.weight is untrainable\n",
+      "transformer.layer.0.ffn.lin2.bias is untrainable\n",
+      "transformer.layer.0.output_layer_norm.weight is untrainable\n",
+      "transformer.layer.0.output_layer_norm.bias is untrainable\n",
+      "transformer.layer.1.attention.q_lin.weight is untrainable\n",
+      "transformer.layer.1.attention.q_lin.bias is untrainable\n",
+      "transformer.layer.1.attention.k_lin.weight is untrainable\n",
+      "transformer.layer.1.attention.k_lin.bias is untrainable\n",
+      "transformer.layer.1.attention.v_lin.weight is untrainable\n",
+      "transformer.layer.1.attention.v_lin.bias is untrainable\n",
+      "transformer.layer.1.attention.out_lin.weight is untrainable\n",
+      "transformer.layer.1.attention.out_lin.bias is untrainable\n",
+      "transformer.layer.1.sa_layer_norm.weight is untrainable\n",
+      "transformer.layer.1.sa_layer_norm.bias is untrainable\n",
+      "transformer.layer.1.ffn.lin1.weight is untrainable\n",
+      "transformer.layer.1.ffn.lin1.bias is untrainable\n",
+      "transformer.layer.1.ffn.lin2.weight is untrainable\n",
+      "transformer.layer.1.ffn.lin2.bias is untrainable\n",
+      "transformer.layer.1.output_layer_norm.weight is untrainable\n",
+      "transformer.layer.1.output_layer_norm.bias is untrainable\n",
+      "transformer.layer.2.attention.q_lin.weight is untrainable\n",
+      "transformer.layer.2.attention.q_lin.bias is untrainable\n",
+      "transformer.layer.2.attention.k_lin.weight is untrainable\n",
+      "transformer.layer.2.attention.k_lin.bias is untrainable\n",
+      "transformer.layer.2.attention.v_lin.weight is untrainable\n",
+      "transformer.layer.2.attention.v_lin.bias is untrainable\n",
+      "transformer.layer.2.attention.out_lin.weight is untrainable\n",
+      "transformer.layer.2.attention.out_lin.bias is untrainable\n",
+      "transformer.layer.2.sa_layer_norm.weight is untrainable\n",
+      "transformer.layer.2.sa_layer_norm.bias is untrainable\n",
+      "transformer.layer.2.ffn.lin1.weight is untrainable\n",
+      "transformer.layer.2.ffn.lin1.bias is untrainable\n",
+      "transformer.layer.2.ffn.lin2.weight is untrainable\n",
+      "transformer.layer.2.ffn.lin2.bias is untrainable\n",
+      "transformer.layer.2.output_layer_norm.weight is untrainable\n",
+      "transformer.layer.2.output_layer_norm.bias is untrainable\n",
+      "transformer.layer.3.attention.q_lin.weight is untrainable\n",
+      "transformer.layer.3.attention.q_lin.bias is untrainable\n",
+      "transformer.layer.3.attention.k_lin.weight is untrainable\n",
+      "transformer.layer.3.attention.k_lin.bias is untrainable\n",
+      "transformer.layer.3.attention.v_lin.weight is untrainable\n",
+      "transformer.layer.3.attention.v_lin.bias is untrainable\n",
+      "transformer.layer.3.attention.out_lin.weight is untrainable\n",
+      "transformer.layer.3.attention.out_lin.bias is untrainable\n",
+      "transformer.layer.3.sa_layer_norm.weight is untrainable\n",
+      "transformer.layer.3.sa_layer_norm.bias is untrainable\n",
+      "transformer.layer.3.ffn.lin1.weight is untrainable\n",
+      "transformer.layer.3.ffn.lin1.bias is untrainable\n",
+      "transformer.layer.3.ffn.lin2.weight is untrainable\n",
+      "transformer.layer.3.ffn.lin2.bias is untrainable\n",
+      "transformer.layer.3.output_layer_norm.weight is untrainable\n",
+      "transformer.layer.3.output_layer_norm.bias is untrainable\n",
+      "transformer.layer.4.attention.q_lin.weight is untrainable\n",
+      "transformer.layer.4.attention.q_lin.bias is untrainable\n",
+      "transformer.layer.4.attention.k_lin.weight is untrainable\n",
+      "transformer.layer.4.attention.k_lin.bias is untrainable\n",
+      "transformer.layer.4.attention.v_lin.weight is untrainable\n",
+      "transformer.layer.4.attention.v_lin.bias is untrainable\n",
+      "transformer.layer.4.attention.out_lin.weight is untrainable\n",
+      "transformer.layer.4.attention.out_lin.bias is untrainable\n",
+      "transformer.layer.4.sa_layer_norm.weight is untrainable\n",
+      "transformer.layer.4.sa_layer_norm.bias is untrainable\n",
+      "transformer.layer.4.ffn.lin1.weight is untrainable\n",
+      "transformer.layer.4.ffn.lin1.bias is untrainable\n",
+      "transformer.layer.4.ffn.lin2.weight is untrainable\n",
+      "transformer.layer.4.ffn.lin2.bias is untrainable\n",
+      "transformer.layer.4.output_layer_norm.weight is untrainable\n",
+      "transformer.layer.4.output_layer_norm.bias is untrainable\n",
+      "transformer.layer.5.attention.q_lin.weight is untrainable\n",
+      "transformer.layer.5.attention.q_lin.bias is untrainable\n",
+      "transformer.layer.5.attention.k_lin.weight is untrainable\n",
+      "transformer.layer.5.attention.k_lin.bias is untrainable\n",
+      "transformer.layer.5.attention.v_lin.weight is untrainable\n",
+      "transformer.layer.5.attention.v_lin.bias is untrainable\n",
+      "transformer.layer.5.attention.out_lin.weight is untrainable\n",
+      "transformer.layer.5.attention.out_lin.bias is untrainable\n",
+      "transformer.layer.5.sa_layer_norm.weight is untrainable\n",
+      "transformer.layer.5.sa_layer_norm.bias is untrainable\n"
+     ]
+    }
+   ],
+   "source": [
+    "last_ff = '5.ffn'\n",
+    "output_lyr = '5.output_layer'\n",
+    "for name, param in model.named_parameters():\n",
+    "    #print(name)\n",
+    "    if not (last_ff in name or output_lyr in name):\n",
+    "        print(f\"{name} is untrainable\")\n",
+    "        param.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5ac9c1a-df65-4b10-a980-ff95370266f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -375,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
